5.0.3 -> 5.0.4:
    - glen: print error when makeTempPath fails due missing temp dir
    - jbj: permit firefox debugging by creating an empty dir (#444310).
    - jbj: header: free tag data on error retrurn with damaged data.
    - rpm.org: rpmsw: insure that time has passed while calibrating (#435309).
    - jbj: header: fix: avoid double free with damaged data (#442761).
    - jbj: QNX: retrofit u_int32_t typedef where needed.
    - jbj: add random arch name feelgood fluffiness (#432496).
    - jbj: prepare for Fedorable dependency loops (#437041).
    - proyvind: add more compatibility adaptions to rpm4 compatibility wrapper (making deltarpm & ruby-rpm work)
    - proyvind: add rpmfiBuildFNames() to rpm4 compatibility wrapper (needed by rpmstats)

5.0.2 -> 5.0.3:
    - proyvind: add rpm 4 API compatibility wrapper (urpmi & apt-get succesfully ported with this so far \o/)
    - afb: python: backport fix for rpm.archscore() and add rpm.platformscore().
    - jbj: fix: eliminate librpmdb->librpm from dosetenv, use setenv(3) instead.
    - jbj: fix: rpmtsCheck non-zero return doesn't print failed build deps.
    - proyvind: add some extra functionality to gendiff (ancient Mandriva patch by Chmouel Boudjnah)
    - pixel: do check free size when bavail is 0
    - jbj: refactor rpmcliErase to use same code as rpmtsInstall.
    - jbj: fix: rpmtsCheck non-zero return prevents --erase.
    - jbj: fix: avoid {pre,post}trans scrareMem assert failure.
    - rpm.org: make find-lang --with-gnome picks up omf files (rhbz#251400) 
    - proyvind: python: add back RPMSENSE_FIND_REQUIRES, needed by rpmlint
    - proyvind: trim multiple slashes from buildroot for check-files script (from Nanar/Olivier Thauvin)
    - proyvind: make rpmdb cpp compliant (from spturtle/Christiaan Welvaart)
    - jbj: fix: (again) rpmtsCheck() needs to return 1 when problems exist.
    - rse: add support for QNX by adjusting to its 3-parameter based makedev(2)