@@ -993,7 +993,7 @@ retry:
 #else
 	rpmTag tagN = RPMTAG_PROVIDENAME;
 #endif
-	rpmds P = rpmdsFromPRCO(ts->PRCO, tagN);
+	rpmds P = rpmdsFromPRCO(rpmtsPRCO(ts), tagN);
 	if (rpmdsSearch(P, dep) >= 0) {
 	    rpmdsNotify(dep, _("(sysinfo provides)"), rc);
 	    goto exit;
@@ -1714,15 +1714,19 @@ zapRelation(rpmte q, rpmte p,
 
 	Flags = rpmdsFlags(requires);
 
+#if 0
 	dp = rpmdsNewDNEVR( identifyDepend(Flags), requires);
+#endif
 
 	/*
 	 * Attempt to unravel a dependency loop by eliminating Requires's.
 	 */
 	if (zap) {
+#if 0
 	    rpmlog(msglvl,
 			_("removing %s \"%s\" from tsort relations.\n"),
 			(rpmteNEVRA(p) ?  rpmteNEVRA(p) : "???"), dp);
+#endif
 	    rpmteTSI(p)->tsi_count--;
 	    if (tsi_prev) tsi_prev->tsi_next = tsi->tsi_next;
 	    tsi->tsi_next = NULL;
@@ -2285,8 +2289,8 @@ rescan:
 
 	    /* T13. Print predecessor chain from start of loop. */
 	    while ((p = q) != NULL && (q = rpmteTSI(p)->tsi_chain) != NULL) {
+		const char * nevra;
 		const char * dp;
-		char buf[4096];
 		int msglvl = (anaconda || (rpmtsDFlags(ts) & RPMDEPS_FLAG_DEPLOOPS))
 			? RPMLOG_WARNING : RPMLOG_DEBUG;
 ;
@@ -2302,12 +2306,12 @@ rescan:
 		/* Find (and destroy if co-requisite) "q <- p" relation. */
 		dp = zapRelation(q, p, 1, &nzaps, msglvl);
 
+#if 0
 		/* Print next member of loop. */
-		buf[0] = '\0';
-		if (rpmteNEVRA(p) != NULL)
-		    (void) stpcpy(buf, rpmteNEVRA(p));
-		rpmlog(msglvl, "    %-40s %s\n", buf,
+		nevra = rpmteNEVRA(p);
+		rpmlog(msglvl, "    %-40s %s\n", (nevra ? nevra : "???"),
 			(dp ? dp : "not found!?!"));
+#endif
 
 		dp = _free(dp);
 	    }
@@ -2541,8 +2545,8 @@ int rpmtsCheck(rpmts ts)
      * Make sure transaction dependencies are satisfied.
      */
     {	const char * tsNEVRA = "transaction dependencies";
-	rpmds R = rpmdsFromPRCO(ts->PRCO, RPMTAG_REQUIRENAME);
-	rpmds C = rpmdsFromPRCO(ts->PRCO, RPMTAG_CONFLICTNAME);
+	rpmds R = rpmdsFromPRCO(rpmtsPRCO(ts), RPMTAG_REQUIRENAME);
+	rpmds C = rpmdsFromPRCO(rpmtsPRCO(ts), RPMTAG_CONFLICTNAME);
 	rpmds D = NULL;
 	rpmds L = NULL;
 	const char * dep = NULL;
